fixed chracter select header aswell as some character spacing

--- a/styles/CRT.scss
+++ b/styles/CRT.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
     background-color: #01140b;
     color: #fff;
-    height: 90vh;
+    height: 86vh;
     width: 1500px;
     top: 100px; 
     left: calc(50% - 750px);
@@ -15,7 +15,7 @@
 .screen {
     position: relative;
     width: 90%;
-    height: 70%;
+    height: 60%;
     margin: 0 auto;
     background: #233f47;
     border-radius: 50%/10%;
