--- a/styles/index.scss
+++ b/styles/index.scss
@@ -24,3 +24,7 @@
     position: relative;
     width: auto;
 }
+
+.giant-text {
+    font-size: 60px;
+}
